@@ -46,6 +46,7 @@ Other Changes:
   the whole widget is clipped.
 - imgui_freetype: Fixed crash when FT_Render_Glyph() fails to render a glyph and returns NULL
   (which apparently happens with Freetype 2.11). (#4394, #4145?).
+- Backends: OpenGL3: Fix our new GL loader conflicting with user using GL3W. (#4445)
 
 
 -----------------------------------------------------------------------
